Discovery supports multiple games

--- a/client/stylesheets/app.styl
+++ b/client/stylesheets/app.styl
@@ -1,11 +1,14 @@
 .join-game
   margin-top: 20px
 
+.game-list-item
+  margin: 18px
+
 .game-list-name
-  font-weight: 200px
   font-size: 35px
-  margin-bottom: 30px
-  color: #0A98D3
+
+.game-list-description
+  font-size: 16px
 
 .game-info-text
   font-size: 30
@@ -27,8 +30,8 @@
 //profile photos
 .large-avatar
   width: 150px
-  height: 150px 
-  border-radius: 23px 
+  height: 150px
+  border-radius: 23px
 
 //used in the player list
 .medium-avatar
@@ -49,7 +52,7 @@
 .profile-screen-name
   display: inline
 
-.sidebar 
+.sidebar
   font-size: 15px
 
 .login-page
