--- a/client/stylesheets/jank.styl
+++ b/client/stylesheets/jank.styl
@@ -22,3 +22,6 @@
 .discovery-callout
   background-color: #DAE9F6
   border-color: #0A98D3
+
+.discovery-callout-disabled
+  background-color: #F3F5F6
