--- a/client/templates/index.hbs
+++ b/client/templates/index.hbs
@@ -1,20 +1,19 @@
 <div class="container">
   <div class="jumbotron">
     <h3>Welcome to <span class="logo">flesh</span> </h3>
-    <p> You're probably here for the 
-    {{#link-to 'game' 2 }} University of Idaho Fall 2014 Game {{/link-to}}
-    <p>
     <div class="alert alert-warning"> 
       {{render sms_instructions}}
     </div>
-    </p>
     {{#if session.isAuthenticated}}
     {{else}}
-      <p> 
-        To get started 
+      <p>
+        To get started
         {{#link-to 'login'}} Login {{/link-to}} or
         {{#link-to 'users.create'}} Create a new account {{/link-to}}
       </p>
     {{/if}}
+  </div>
+  <div>
+    {{partial 'discovery'}}
   </div>
 </div>
