--- a/client/templates/sms_instructions.hbs
+++ b/client/templates/sms_instructions.hbs
@@ -1,6 +1,11 @@
- <p>
- SMS tagging instructions:
- <p>
- 1. Visit {{#link-to 'user.edit' session.user}} settings {{/link-to}} and add your phone #
- <p>
- 2. text +1 208-402-4500 with "tag" followed by a human code. e.g. "tag abcd" 
+ <h4>
+ 	SMS tagging instructions:
+ </h4>
+ <ol>
+ 	<li>
+ 		Visit {{#link-to 'user.edit' session.user}} settings {{/link-to}} and add your phone #
+ 	</li>
+ 	<li>
+ 		text +1 208-402-4500 with "tag" followed by a human code. e.g. "tag abcd"
+ 	</li>
+ </ol>
