--- a/client/templates/index.hbs
+++ b/client/templates/index.hbs
@@ -1,18 +1,22 @@
 <div class="container">
-  <div class="jumbotron">
-    <h3>Welcome to <span class="logo">flesh</span> </h3>
-    <div class="alert alert-warning"> 
-      {{render sms_instructions}}
-    </div>
+  <div>
+    <h2>Welcome to <span class="logo">flesh</span></h2>
+    <br>
     {{#if session.isAuthenticated}}
     {{else}}
+        <h4>To get started</h4>
       <p>
-        To get started
         {{#link-to 'login'}} Login {{/link-to}} or
         {{#link-to 'users.create'}} Create a new account {{/link-to}}
       </p>
+      <br>
     {{/if}}
+    <div >
+      {{render sms_instructions}}
+    </div>
   </div>
+  <br>
+  <br>
   <div>
     {{partial 'discovery'}}
   </div>
