--- a/client/templates/discovery.hbs
+++ b/client/templates/discovery.hbs
@@ -1,5 +1,5 @@
 {{#each game in games}}
-  <div {{bind-attr class=":game-list-item :bs-callout game.is_ended:discovery-callout:discovery-callout-disabled"}}>
+  <div {{bind-attr class=":game-list-item :bs-callout game.is_ended:discovery-callout-disabled:discovery-callout"}}>
     <div class="container-fluid profile-header">
       <div class="row">
         <div class="col-md-12">
