--- a/client/templates/index.hbs
+++ b/client/templates/index.hbs
@@ -1,6 +1,6 @@
 <div class="container">
   <div>
-    <h2>Welcome to <span class="logo">flesh</span></h2>
+    <h2>Welcome to <span class="flesh-logo">flesh</span></h2>
     <br>
     {{#if session.isAuthenticated}}
     {{else}}
