fixing hard coded link

--- a/client/templates/application.hbs
+++ b/client/templates/application.hbs
@@ -21,7 +21,7 @@
           <li>{{#link-to 'user.edit' session.user classNames="fa fa-gear"}} Settings {{/link-to}}</li>
           <li><a {{ action 'invalidateSession' }}>Logout</a></li>
           <li>{{#link-to 'user' session.user}} Profile {{/link-to}}</li>
-          <li>{{#link-to 'game' 2}} Fall Game {{/link-to}}</li>
+          <li>{{#link-to 'game' 3}} 2015 Winter Game {{/link-to}}</li>
         {{else}}
           <li>{{#link-to 'login'}} Login {{/link-to}}</li>
           <li>{{#link-to 'users.create'}} Create Account {{/link-to}}</li>
